--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         }
         @media(max-width:767px){
             p{
-                font-size: 10px;
+                font-size: 16px;
             }
         }
         span{
@@ -52,7 +52,7 @@
     </style>
 </head>
 <body>
-    <p class="parg">In sociology, the family is taken as the smallest unit of society. The world is vast and family is the smallest part of it. Various sociological surveys say that it is important for every human being. For coping-up with the harsh scenarios of the outside world, the support of loved ones is important. A human is a family man; from the childhood stage to adolescence he/she learns things from his domestic environment. In the journey of life, a person grows into a personality.</p>
+    <p class="parg">In sociology, the family is taken as the smallest unit of society. Various sociological surveys say that it is important for every human being. For coping-up with the harsh scenarios of the outside world, the support of loved ones is important. A human is a family man; from the childhood stage to adolescence he/she learns things from his domestic environment.</p>
 
     <hr><div class="inp"><input type="text" class="tex" /></div>
 <script>
