--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
             pointer-events: none;
             opacity: 0.4;
         }
+        h3{
+            font-family: monospace;
+            font-size: x-large;
+        }
     </style>
 </head>
 <body>
